--- a/.github/workflows/python_workflow.yml
+++ b/.github/workflows/python_workflow.yml
@@ -34,3 +34,18 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
+        
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: us-east-1
+        
+    - name: Configure DVC
+      uses: iterative/setup-dvc@v1
+    - name: Pull DVC
+      run: |
+        dvc pull
+
+  
